kustomize-store/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart
spec:
  template:
    spec:
      serviceAccountName: redis
